src/css/global.css
/* Default Styles */
* {
  font-family: "Poppins", sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
  scroll-padding-top: 2rem;
}

/* Variables */
:root {
  --main-color: #647bff;
  --body-color: #090a1a;
  --container-color: #171b3c;
  --heading-color: #222231;
  --box-color: #0d0f26;
  --bg-color: #fff;
}

body {
  color: var(--bg-color);
  background: var(--body-color);
}

img {
  width: 100%;
}

section {
  padding: 3rem 0 2rem;
}

a {
  text-decoration: none;
}

li {
  list-style: none;
}

.container {
  max-width: 960px;
  margin: auto;
  width: 100%;
}

.logo {
  font-size: 1.2rem;
  font-weight: 600;
  color: var(--main-color);
}

.heading {
  font-size: 5rem;
  text-transform: uppercase;
  color: var(--heading-color);
  text-align: center;
  margin-bottom: 2rem;
}

.btn {
  font-size: 0.97rem;
  display: inline-flex;
  align-items: center;
  column-gap: 0.5rem;
  color: var(--bg-color);
  background: var(--main-color);
  padding: 12px 16px;
  border-radius: 0.4rem;
  margin-top: 1rem;
}

.btn .bx {
  font-size: 1.2rem;
}

.btn:hover {
  background: #546eff;
  transition: 0.3s all linear;
}

